--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ h3.filter-heading{
   margin-left: 25px;
   color: white;
   font-weight: 100;
+  font-size: 36px;
 }
 
 .topmenu {
@@ -123,8 +124,8 @@ nav.left-nav {
   border-color: white;
 }
 
-h3.project-title{
-  font-size: 36px;
+h4.project-title{
+  font-size: 28px;
   color: white;
   display: inline;
 }
@@ -141,11 +142,22 @@ h3.project-title{
 
 .filter-language, .filter-field{
   display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 2px #161718;
+  border: 1px solid gray;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.filter-language:hover , .filter-field:hover {
+  background: transparent;
 }
 
 #filter-language, #filter-field{
@@ -153,11 +165,11 @@ h3.project-title{
 }
 
 .filter-language{
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .filter-field{
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 h3.filter-title{
@@ -2001,7 +2013,7 @@ header {
   color: #fff;
 }
 #aboutme {
-    background: #D32F2F;
+    background: #FF9800;
     background-size: cover;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -2169,12 +2181,12 @@ header {
     padding-top: 50px;
 }
 #timeline{
-    background: #2E7D32;
+    background: #03A9F4;
     padding-top: 100px;
     padding-bottom: 100px;
 }
 #links {
-    background-color: #0097A7;
+    background-color: #009688;
     padding-top: 100px;
     padding-bottom: 100px;
 }
