--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,12 @@ a:focus {
   width: auto;
 }
 
+.tags-container {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 50px;
+}
+
 .tag-language {
     background-color: rgba(128, 255, 0, 0.8);
 }
@@ -122,6 +128,7 @@ nav.left-nav {
 .panel{
   background-color: rgba(0, 0, 0, 0.4);
   border-color: white;
+  height: 400px;
 }
 
 h4.project-title{
@@ -1992,7 +1999,7 @@ header {
     background-size: cover;
 }
 .imgsus {
-    margin-top: 10%;
+    margin-top: 5%;
     box-shadow: none;
     border: 4px solid #fff;
 }
